--- a/instantwallpaper.html
+++ b/instantwallpaper.html
@@ -42,7 +42,7 @@
 									<input type="text" class="form-control" id="imageWidth" value="1920">
 								</div>
 								<div class="col-sm-1">
-									<button id="imageSwitchWH" class="btn btn-info"><i class="fa fa-exchange"></i></button>
+									<button id="imageSwitchWH" class="btn btn-info" tabindex="-1"><i class="fa fa-exchange"></i></button>
 								</div>
 								<label for="imageHeight" class="col-sm-1 control-label">Height</label>
 								<div class="col-md-2 col-sm-3">
@@ -52,8 +52,14 @@
 							<div class="form-group">
 								<div class="col-sm-offset-4 col-sm-8">
 									<button id="imageButton" type="submit" class="btn btn-primary">Generate</button>
-									<a id="imageDownload" class="btn btn-success hidden" download="instant.png">Download</a>
 									<a id="showHelp" href="">Show help</a>
+								</div>
+							</div>
+							<div id="downloadBlock" class="form-group hidden">
+								<div class="col-sm-offset-4 col-sm-8">
+									<span>Create Image: </span>
+									<button id="imageDownloadImage" class="btn btn-success">Below</button>
+									<button id="imageDownloadOpen" class="btn btn-success">New Tab</button>
 								</div>
 							</div>
 						</form>
@@ -78,9 +84,18 @@
 							<button id="imageShrink" class="btn btn-sm btn-info">Shrink Slightly</button>
 							<button id="imageShrinkCont" class="btn btn-sm btn-info">Shrink Continuously</button>
 						</p>
-						<canvas id="imageCanvas" class="hidden" style="display: block; margin: 0 auto; max-width: 98%; max-height: 100vh;" tabIndex="1"></canvas>
-						<p id="imageOriginalText" class="hidden" style="margin-top: 10px;">Original Image</p>
-						<img id="imageImage"></img>
+						<div id="canvasBlock" class="hidden">
+							<p style="margin-top: 10px;">Working Image</p>
+							<canvas id="imageCanvas" class="block-scaled" tabIndex="1"></canvas>
+							<hr/>
+							<p style="margin-top: 10px;">Original Image</p>
+							<img id="imageImage" class="block-scaled"></img>
+							<div id="downloadImageBlock" class="hidden">
+								<hr/>
+								<p style="margin-top: 10px;">Downloadable Image</p>
+								<img id="imageGenerated" class="block-scaled"></img>
+							</div>
+						</div>
 					</div>
 					<div class="col-lg-2 col-sm-1 col-xs-hidden"></div>
 				</div>
@@ -105,6 +120,6 @@
 		<script src="js/vendor/bootstrap.min.js"></script>
 		<script src="js/instantwallpaper.js"></script>
 		
-		<script src="js/g-analytics.js"></script>
+		<!--<script src="js/g-analytics.js"></script>-->
 	</body>
 </html>
